@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.8317 2004/12/06 08:58:59 agc Exp $
+$NetBSD: CHANGES,v 1.8318 2004/12/07 21:14:38 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -5822,3 +5822,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added python24-pth-2.4 [recht 2004-12-05]
 	Updated getmail to 4.2.4 [schmonz 2004-12-06]
 	bsd.pkg.mk: started freeze for pkgsrc-2004Q4 branch [agc 2004-12-06]
+	Updated vmware-module3 to 3.2.1.6 [jdolecek 2004-12-07]
